第二次提交

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div style="background-color:red">
 <input type="checkbox" onclick="onAndOff(this.value,'example-i')" class="ios-switch bigswitch tpl-switch-btn am-margin-top-xs ttr" checked="" value="1"> 
 <input type="checkbox" onclick="onAndOff(this.value,'example-i')"  class="ios-switch bigswitch tpl-switch-btn am-margin-top-xs tti" value="2">
-<button>请点击这里</button>
+<button>请点击这里252255</button>
  <input class="am-form-field example-i" placeholder="请输入审核失败的原因"  name="realName">
 
 </div>
