--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
          
         </div>
         <div class="container">
-            <h2 class="title"><a href="http://www.sucaihuo.com/js/128.html">教程：百度编辑器ueditor</a></h2>
+            <h2 class="title"><a href="http://www.sucaihuo.com/js/128.html">教程：百度编辑器ueditorjhjjjjjjjjjjjjjjjjjjjjjjjjjjjj</a></h2>
             <script id="editor" type="text/plain" style="width:800px;height:420px;margin:0 auto 10px"></script>
             <div id="btns">
                 <div>
